feat:(doc) add documentation readme
