# phincon_week_6/assignment-3/backend/routes/auth.route.js
@@ -1,9 +1,10 @@
 const express = require("express");
 const router = express.Router();
-const { register, login } = require("../controllers/auth.controller");
+const { register, login, logout } = require("../controllers/auth.controller");
 const { middlewareAuthRegister, middlewareAuthLogin } = require("../middlewares/auth.middleware");
 
 router.post("/register", middlewareAuthRegister, register);
 router.post("/login", middlewareAuthLogin, login);
+router.post("/logout", logout);
 
 module.exports = router;
