# phincon_week_6/assignment-3/backend/routes/users-courses.route.js
@@ -1,0 +1,9 @@
+const express = require("express");
+const router = express.Router();
+
+const { middlewareAuth } = require("../middlewares/auth.middleware");
+const { registerCourse } = require("../controllers/users-courses.controller");
+
+router.post("/register", middlewareAuth, registerCourse);
+
+module.exports = router;
